# v2

./: .gitignore  COLAB_INSTRUCTIONS.md  PLAN.md  PROPOSAL.md  README.md  _demo_stream.py  _validate.py  check_gpu.py  colab_complete.py  colab_fix.py  colab_fix2.py  colab_run.py  omniquant_apex.py  omniquant_pro.py  requirements.txt  session-new.md  session-night_8.13.md  stream_app.py  test_codec.py  train_ucf.py  train_v10.py  train_v11.py  train_v12.py  train_v13.py  train_v14.py  train_v15.py  train_v16.py  train_v17.py  train_v18.py  train_v19.py  train_v2.py  train_v20.py  train_v3.py  train_v4.py  train_v5.py  train_v6.py  train_v7.py  train_v8.py  train_v9.py
.claude/: settings.local.json
codec/: __init__.py  decoder.py  encoder.py  lcc.py  packets.py  sparse.py
demo/: __init__.py  metrics.py  quick_train.py  run_clip.py  run_colab.py  run_demo.py  run_gpu.py  run_pretrained.py
gtm/: __init__.py  codec.py  polar.py  qjl.py  quantize.py  rht.py
mrgwd/: __init__.py  latent_diffusion.py  model.py  (+1 more)
omniaquant-apex/: Cargo.toml  PLAN.md
omniaquant-apex/src/: lib.rs  main.rs  onnx_engine.rs  pretrained.rs  video_io.rs  webrtc.rs
omniaquant-apex/src/codec/: decoder.rs  encoder.rs  lcc.rs  mod.rs  packets.rs  sparse.rs
omniaquant-apex/src/gtm/: codec.rs  mod.rs  polar.rs  qjl.rs  quantize.rs  rht.rs
omniaquant-apex/src/metrics/: mod.rs
omniaquant-apex/src/mrgwd/: mod.rs  model.rs  synth.rs
omniaquant-apex/src/streaming/: adaptive.rs  mod.rs  server.rs
omniaquant-apex/src/ulep/: mod.rs  model.rs  predictor.rs
omniaquant-apex/web/: index.html
(+11 files in other folders)
