[package]
name = "omniaquant-apex"
version = "0.1.0"
edition = "2021"
description = "Hyper-Semantic Polar Streaming Codec — ultra-low-bitrate 8K video streaming"
license = "MIT"

[dependencies]
# Async runtime & networking
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.23"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Math / numerics
ndarray = { version = "0.15", features = ["serde"] }
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
statrs = "0.17"
num-traits = "0.2"

# Image / video
image = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1.10"

# Time
chrono = "0.4"

# Encoding
base64 = "0.22"
futures = "0.3"

# ONNX Runtime inference (optional — module has built-in fallback)
# ort = "=2.0.0-rc.12"  # Uncomment when ONNX models are available

# WebRTC signaling (pure Rust)
str0m = "0.6"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
